# positional-bias-llms

./: .gitignore  README.md  create_update_dataset.py  kendall_tau-coefficients_input_output_order.csv  openai_batch_api.ipynb  pyproject.toml  rouge_metric_multithreading.py  run_evaluation.py  run_generate_golden_descriptions.py  run_gpt_evaluation.py  run_reevaluation.py  statistical_tests_and_plot_generation.ipynb  statistical_tests_and_plot_generation_temp_0.5.ipynb  visualize.ipynb
helper/: batch_loading.py  create_swarmplot.py
models/: __init__.py  basemodel.py  gemini15flash8b_model.py  gemini15flash_model.py  gemini2flash_model.py  gemma227b_model.py  gemma22b_model.py  library.py  llama321B_model.py  llama32_model.py  mistral_model.py  phi3_medium.py  phi3_mini.py  qwen2532b_model.py  qwen25_model.py  solar_model.py  wizardlm2_model.py
openai-batch-files/: set1_test-gpt-3.5-turbo-0125.jsonl  set1_test-gpt-4o-2024-11-20.jsonl  set1_test-gpt-4o-mini-2024-07-18.jsonl
scorer/: __init__.py  ari_scorer.py  average_sentence_length.py  avg_word_len.py  cohesive_device_density.py  coleman_liau_scorer.py  emotion_analysis.py  flesh_kincaid_scorer.py  flesh_scorer.py  golden_description_bleu.py  golden_description_cosine_tfidf.py  golden_description_rogue.py  kolmoforov_scorer.py  kolmoforov_scorer_normalized.py  lexical_density.py  library.py  missing_topic_scorer.py  named_entity_density.py  passive_voice_ratio.py  pos_tag_diversity.py  question_density.py  sentence_variety.py  sentiment_consistency.py  shanon_scorer.py  shanon_scorer_normalized.py  smog_scorer.py  (+7 more)
(+29 files in other folders)
